--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: sergei <sergei@student.42.fr>              +#+  +:+       +#+         #
+#    By: sounania <sounania@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/08/21 10:23:12 by sergei            #+#    #+#              #
-#    Updated: 2025/08/27 19:43:45 by sergei           ###   ########.fr        #
+#    Updated: 2025/08/28 10:25:56 by sounania         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRC = push_swap_utils.c push_swap_utils1.c push_swap_utils2.c push_swap.c 
+SRC = atoi_helpers.c util_helpers.c push_swap_utils.c push_swap_utils1.c push_swap_utils2.c push_swap.c 
 
 OBJ = $(SRC:.c=.o)
 
